# gemini-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  server.py  test_server.py  usage-tips.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
gemini-mcp/: README.md  install.sh  server.py  setup.sh
tests/: test_server.py
